# textforge

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_chunking.py  test_cli.py  test_compare.py  test_extraction.py  test_similarity.py  test_statistics.py  test_transform.py  test_validation.py
textforge/: __init__.py  chunking.py  cli.py  compare.py  extraction.py  similarity.py  statistics.py  transform.py  validation.py
